--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,24 +5,90 @@
 
 page-home {
   
-ion-navbar.toolbar-ios {
-min-height: 60px;
+ion-navbar.toolbar {
+    min-height: 60px;
+    text-align: center;
+    .toolbar-background{
+        background-color:rgb(125,206,160);
+    }
 
-    ion-title .toolbar-title-ios{
+    ion-title .toolbar-title{
         font-family: YellowTail;
         font-size:30px;
+        color:#fff;
     }
 }
 
+.chartWrapper{
+    position:relative;
+    width:100%;
 
-.total{
-    height:auto;
+
+    #dollar{
+        font-size:195px;
+        position: absolute;
+        width:100%;
+        height:300px;
+        color:rgb(125,206,160);
+
+        top:0;
+        
+        text-align: center;
+
+
+        &.hide{
+            display:none;
+        }
+        .text{
+            font-size:20px;
+            color:#000;
+        }
+    }
 }
+.bottom-content{
+    width:100%;
+    position: absolute;
+    bottom:10px;
+    padding:0px 16px;
+    text-align: center;
+    
+    ion-item{
+        padding:0px;
+
+        input{
+            text-align: center;
+            padding:0;
+        }
+    }
+}
+
+#totalWrapper{
+    height:50px;
+ #total{
+     
+    &.hidden{
+        display:none;
+
+    }
+
+    &.visible{
+        display:block;
+    }
+    
+    .yearsOrMonths{
+        margin-top:10px;
+        color:rgb(125,206,160);
+        font-size:20px;
+    }
+}
+}
+
 ion-footer{
     padding:10px;
-    button.button-ios-secondary{
+    button.button-md-secondary{
         width:100%;
         margin:0;
+        background-color:rgb(125,206,160);
     }
 }
 
